Fixed spacing on theme checkboxes

--- a/styles/darkStyles.css
+++ b/styles/darkStyles.css
@@ -45,7 +45,7 @@ body {
 }
 
 label {
-	margin-left: 30px;
+	margin-left: 15px;
 }
 
 .checkboxes{
@@ -87,7 +87,7 @@ label {
 .deleteButton {
 	color: black;
 	font-size: 10px;
-	margin: 5px 0 5px 10px;
+	margin: 5px 0 5px 5px;
 	border-radius: 5px;
 }
 
@@ -112,6 +112,3 @@ input.user-radio {
 	margin-left: 8px;
 	margin-right: 8px;
 }
-
-
-
